# backend/src/routes/projectRoutes.js
@@ -7,6 +7,8 @@ import {
     updateProject
 } from "../controllers/projectsControllers.js";
 
+import { createTicket } from "../controllers/ticketsControllers.js";
+
 import { verifyToken, authorizeRoles } from "../middlewares/authMiddleware.js";
 
 const router = express.Router();
@@ -20,5 +22,7 @@ router.get("/:id", authorizeRoles("Admin", "User"), getProjectById);
 router.post("/", authorizeRoles("Admin", "User"), createProject);
 
 router.put("/:id", authorizeRoles("Admin", "User"), updateProject);
+
+router.post("/:id/tickets", authorizeRoles("Admin", "User"), createTicket);
 
 export default router;
